# mvp

./: .gitignore  .gitmodules  CMakeLists.txt  CPackOptions.cmake.in  README.txt  changelog.md  installer-gpl-notice.txt  libmvp.pro  mvp.pro  readme.txt
cmake/: CPackExternal_linuxdeployqt.cmake  FindQuaZip.cmake  FindSphinx.cmake  NSIS.template.in
extras/docker/: Dockerfile.debian-bookworm_ctest  Dockerfile.debian-bullseye_package
src/: CMakeLists.txt  file_dialog.cc  file_dialog.h  firmware.cc  firmware.h  firmware_ops.cc  firmware_ops.h  flash.cc  flash.h  flash_address.cc  flash_address.h  flash_constants.h  flash_widget.cc  flash_widget.h  flash_widget.ui  git_sha1.cc.in  git_sha1.h  git_version.cc.in  git_version.h  gui.cc  gui.h  gui.ui  instruction_file.cc  instruction_file.h  instruction_interpreter.cc  instruction_interpreter.h  libmvp.pri  libmvp.pro  main.cc  mdpp16.cc  mdpp16.h  mdpp16_firmware.cc  mdpp16_firmware.h  mvlc_mvp_erase_unprotect_23bytes.cc  mvlc_mvp_flash.cc  mvlc_mvp_flash_check_test_pages.cc  mvlc_mvp_flash_write_test.cc  mvlc_mvp_flash_write_test2.cc  mvlc_mvp_lib.h  mvp.pro  (+6 more)
src/resources/: gpl-notice.txt
test/: CMakeLists.txt  test.pro  test_file_dialog.cc  test_firmware.cc  test_flash.cc  test_instruction_file.cc  test_instruction_interpreter.cc  test_mdpp16_firmware.cc  test_util.cc  testmain.cc  tests.h
test/test-data/: Makefile  firmware-valid.mvp  with_subdirs.mvp
test/test-data/firmware-01/: 8_1_area_descr.hex
test/test-data/firmware-02/: 8_0_area_descr.hex
test/test-data/firmware-otp-only/: 0_otp.hex
test/test-data/key-handling/12-keys/: MDPP16_sn11150001_sw0009.key
test/test-data/key-handling/MDPP16_sn11150001-source-keys/: MDPP16_sn11150001_sw0003.key  MDPP16_sn11150001_sw0007.key
test/test-data/key-handling/exactly-max-keys/: MDPP16_sn11150001_sw0001.key  MDPP16_sn11150001_sw0002.key  MDPP16_sn11150001_sw0006.key  MDPP16_sn11150001_sw0008.key  MDPP16_sn11150001_sw0012.key  MDPP16_sn11150001_sw0015.key
test/test-data/key-handling/max-keys-exceeded/: MDPP16_sn11150001_sw0004.key  MDPP16_sn11150001_sw0011.key  MDPP16_sn11150001_sw0016.key  MDPP16_sn11150001_sw0017.key  MDPP16_sn11150001_sw0018.key  MDPP16_sn11150001_sw0019.key  MDPP16_sn11150001_sw0020.key
test/test-data/key-handling/max-keys-plus-non-matching/: MDPP16_sn11150001_sw0005.key  MDPP16_sn11150001_sw0010.key  MDPP16_sn11150001_sw0013.key  MDPP16_sn11150001_sw0014.key  MDPP42_sn11150001_sw0001.key
test/test-data/otp-testing/: 0_fake_otp.hex  1_fake_otp.hex
